@@ -398,17 +398,30 @@
      </widget>
      <widget class="QWidget" name="interface_2">
       <layout class="QFormLayout" name="formLayout_4">
-       <item row="1" column="1">
-        <widget class="QCheckBox" name="showLibrary">
+       <item row="0" column="0">
+        <widget class="QLabel" name="label_26">
          <property name="text">
-          <string>Show when no game open</string>
-         </property>
-         <property name="checked">
-          <bool>true</bool>
+          <string>Language</string>
          </property>
         </widget>
        </item>
        <item row="0" column="1">
+        <widget class="QComboBox" name="languages">
+         <item>
+          <property name="text">
+           <string>English</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+       <item row="2" column="0">
+        <widget class="QLabel" name="label_6">
+         <property name="text">
+          <string>Library:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
         <widget class="QComboBox" name="libraryStyle">
          <item>
           <property name="text">
@@ -422,35 +435,38 @@
          </item>
         </widget>
        </item>
-       <item row="0" column="0">
-        <widget class="QLabel" name="label_6">
+       <item row="3" column="1">
+        <widget class="QCheckBox" name="showLibrary">
          <property name="text">
-          <string>Library:</string>
+          <string>Show when no game open</string>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
          </property>
         </widget>
        </item>
-       <item row="2" column="1">
+       <item row="4" column="1">
         <widget class="QPushButton" name="clearCache">
          <property name="text">
           <string>Clear cache</string>
          </property>
         </widget>
        </item>
-       <item row="3" column="0" colspan="2">
+       <item row="5" column="0" colspan="2">
         <widget class="Line" name="line_8">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
         </widget>
        </item>
-       <item row="4" column="1">
+       <item row="6" column="1">
         <widget class="QCheckBox" name="allowOpposingDirections">
          <property name="text">
           <string>Allow opposing input directions</string>
          </property>
         </widget>
        </item>
-       <item row="5" column="1">
+       <item row="7" column="1">
         <widget class="QCheckBox" name="suspendScreensaver">
          <property name="text">
           <string>Suspend screensaver</string>
@@ -460,10 +476,17 @@
          </property>
         </widget>
        </item>
-       <item row="6" column="1">
+       <item row="8" column="1">
         <widget class="QCheckBox" name="pauseOnFocusLost">
          <property name="text">
           <string>Pause when inactive</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0" colspan="2">
+        <widget class="Line" name="line_10">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
          </property>
         </widget>
        </item>
