@@ -10,9 +10,6 @@
 #include "GBAApp.h"
 #include "Window.h"
 
-#include <QLibraryInfo>
-#include <QTranslator>
-
 #include <mgba/core/version.h>
 
 #ifdef QT_STATIC
@@ -30,16 +27,6 @@ int main(int argc, char* argv[]) {
 	SDL_SetMainReady();
 #endif
 	QGBA::GBAApp application(argc, argv);
-
-	QLocale locale = QLocale::system();
-
-	QTranslator qtTranslator;
-	qtTranslator.load(locale, "qt", "_", QLibraryInfo::location(QLibraryInfo::TranslationsPath));
-	application.installTranslator(&qtTranslator);
-
-	QTranslator langTranslator;
-	langTranslator.load(locale, binaryName, "-", ":/translations/");
-	application.installTranslator(&langTranslator);
 
 	return application.exec();
 }
